@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2021,v 1.4758 2021/09/18 02:25:23 mef Exp $
+$NetBSD: CHANGES-2021,v 1.4759 2021/09/18 02:37:18 mef Exp $
 
 Changes to the packages collection and infrastructure in 2021:
 
@@ -7401,3 +7401,4 @@ Changes to the packages collection and infrastructure in 2021:
 	Added math/R-tmvnsim version 1.0.2 [mef 2021-09-18]
 	Updated math/R-mnormt to 2.0.2 [mef 2021-09-18]
 	Added math/R-ncdf4 version 1.17 [mef 2021-09-18]
+	Removed math/R-clim.pact (Removed from the CRAN) [mef 2021-09-18]
